# python-common-expression-language

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  claude.yml  security.yml
docs/: contributing.md  cookbook.md  index.md  requirements.txt
docs/getting-started/: installation.md  quick-start.md
docs/how-to-guides/: access-control-policies.md  business-logic-data-transformation.md  cli-recipes.md  dynamic-query-filters.md  error-handling.md  production-patterns-best-practices.md
docs/javascripts/: mermaid-init.js
docs/reference/: cel-compliance.md  cli-reference.md  python-api.md
docs/tutorials/: cel-language-basics.md  extending-cel.md  thinking-in-cel.md  your-first-integration.md
examples/: basic.py  context.py
examples/performance/: compile_execute_benchmark.py
python/cel/: __init__.py  __main__.py  cel.pyi  cel_lexer.py  cli.py  evaluation_modes.py  expression_storage.py  stdlib.py  tui.py
src/: context.rs  lib.rs
tests/: basic_tests.py  conftest.py  test_arithmetic.py  test_basics.py  test_boolean_coercion.py  test_cli.py  test_compile.py  test_context.py  test_datetime.py  test_docs.py  test_documentation.py  test_dual_mode_comprehensive.py  test_edge_cases.py  test_enhanced_error_handling.py  test_evaluation_mode.py  test_expression_storage.py  test_functions.py  test_issue16_string_literal_regression.py  test_logical_operators.py  test_map_function.py  test_optional_values.py  test_parser_errors.py  test_performance_verification.py  test_stdlib.py  test_tui.py  test_types.py  test_upstream_improvements.py
