
[project]
name = "common-expression-language"
description = "Python bindings for the Common Expression Language (CEL)"
authors = [
    {name = "Brian Thorne", email = "brian@hardbyte.nz"}
]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
]

[project.urls]
Homepage = "https://github.com/hardbyte/python-common-expression-language"
Repository = "https://github.com/hardbyte/python-common-expression-language"

[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"


[tool.maturin]
features = ["pyo3/extension-module"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.1",
    "maturin>=1.8.0",
    "pip>=25.0.0",
]
