
[project]
name = "common-expression-language"
description = "Python bindings for the Common Expression Language (CEL)"
authors = [
    {name = "Brian Thorne", email = "brian@hardbyte.nz"}
]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0", 
    "prompt-toolkit>=3.0.0",
    "pygments>=2.0.0",
]

[project.scripts]
cel = "cel.cli:cli_entry"

[project.urls]
Homepage = "https://github.com/hardbyte/python-common-expression-language"
Repository = "https://github.com/hardbyte/python-common-expression-language"

[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"


[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.1",
    "maturin>=1.8.0",
    "ruff>=0.12.7",
    "mypy>=1.17.1",
]
